Add connbeat configuration

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -67,5 +67,14 @@ startsecs=2
 startretries=2
 user=dd-agent
 
+[program:connbeat]
+command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/conf.d/connbeat.yml
+stdout_logfile=/tmp/out
+stderr_logfile=/tmp/err
+redirect_stderr=true
+priority=999
+startsecs=3
+user=dd-agent
+
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch,go-metro
+programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,connbeat
