--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -57,5 +57,14 @@ priority=999
 startsecs=3
 user=dd-agent
 
+[program:connbeat]
+command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/conf.d/connbeat.yml
+stdout_logfile=/tmp/out
+stderr_logfile=/tmp/err
+redirect_stderr=true
+priority=999
+startsecs=3
+user=dd-agent
+
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch
+programs=forwarder,collector,dogstatsd,jmxfetch,connbeat
