Expect config in /etc/dd-agent

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -68,7 +68,7 @@ startretries=2
 user=dd-agent
 
 [program:connbeat]
-command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/conf.d/connbeat.yml
+command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/connbeat.yml
 stdout_logfile=/tmp/out
 stderr_logfile=/tmp/err
 redirect_stderr=true
