--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -58,7 +58,7 @@ startsecs=3
 user=dd-agent
 
 [program:connbeat]
-command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/conf.d/connbeat.yml
+command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/connbeat.yml
 stdout_logfile=/tmp/out
 stderr_logfile=/tmp/err
 redirect_stderr=true
