Configure log and data directory for connbeat

--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -58,7 +58,7 @@ startsecs=3
 user=dd-agent
 
 [program:connbeat]
-command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/connbeat.yml
+command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/connbeat.yml  -path.logs /var/log/connbeat -path.data /var/lib/connbeat
 stdout_logfile=/tmp/out
 stderr_logfile=/tmp/err
 redirect_stderr=true
