--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -68,7 +68,7 @@ startretries=2
 user=dd-agent
 
 [program:connbeat]
-command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/connbeat.yml
+command=/opt/datadog-agent/bin/connbeat -c /etc/dd-agent/connbeat.yml -path.logs /var/log/connbeat -path.data /var/lib/connbeat
 stdout_logfile=/tmp/out
 stderr_logfile=/tmp/err
 redirect_stderr=true
