--- a/packaging/datadog-agent/source/supervisor.conf
+++ b/packaging/datadog-agent/source/supervisor.conf
@@ -25,7 +25,7 @@ startsecs=2
 environment=LANG=POSIX,PYTHONPATH='agent/checks/libs:$PYTHONPATH'
 
 [program:forwarder]
-command=python agent/ddagent.py --use_simple_http_client=1
+command=python agent/stsagent.py --use_simple_http_client=1
 redirect_stderr=true
 priority=998
 startsecs=3
