--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -15,7 +15,7 @@ loglevel = info
 logfile = /var/log/stackstate/supervisord.log
 logfile_maxbytes = 50MB
 nodaemon = false
-pidfile = /opt/stackstate-agent/run/datadog-supervisord.pid
+pidfile = /opt/stackstate-agent/run/stackstate-supervisord.pid
 logfile_backups = 10
 user=dd-agent
 environment=PYTHONPATH=/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/checks,LANG=POSIX
@@ -31,7 +31,7 @@ user=dd-agent
 environment=PYTHONPATH='/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/checks/libs:$PYTHONPATH'
 
 [program:forwarder]
-command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/ddagent.py
+command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsagent.py
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=5
@@ -58,7 +58,7 @@ startsecs=3
 user=dd-agent
 
 [program:go-metro]
-command=/opt/stackstate-agent/bin/go-metro -cfg="/etc/dd-agent/conf.d/go-metro.yaml"
+command=/opt/stackstate-agent/bin/go-metro -cfg="/etc/sts-agent/conf.d/go-metro.yaml"
 stdout_logfile=NONE
 stderr_logfile=NONE
 redirect_stderr=true
