--- a/stackstate.conf.example
+++ b/stackstate.conf.example
@@ -70,7 +70,7 @@ gce_updated_hostname: yes
 # graphite_listen_port: 17124
 
 # Additional directory to look for Datadog checks (optional)
-# additional_checksd: /etc/dd-agent/checks.d/
+# additional_checksd: /etc/sts-agent/checks.d/
 
 # Allow non-local traffic to this Agent
 # This is required when using this Agent as a proxy for other Agents
