--- a/supervisord.dev.conf
+++ b/supervisord.dev.conf
@@ -25,7 +25,7 @@ priority=999
 startsecs=2
 
 [program:forwarder]
-command=python ddagent.py
+command=python stsagent.py
 stdout_logfile=forwarder.log
 redirect_stderr=true
 priority=998
