--- a/stackstate.conf.example
+++ b/stackstate.conf.example
@@ -1,7 +1,7 @@
 [Main]
 
-# The host of the Datadog intake server to send Agent data to
-dd_url: https://app.datadoghq.com
+# The host of the StackState intake server to send Agent data to
+dd_url: 
 
 # If you need a proxy to connect to the Internet, provide the settings here (default: disabled)
 # proxy_host: my-proxy.com
@@ -15,9 +15,7 @@ dd_url: https://app.datadoghq.com
 # If you run the agent behind haproxy, you might want to enable this
 # skip_ssl_validation: no
 
-# The Datadog api key to associate your Agent's data with your organization.
-# Can be found here:
-# https://app.datadoghq.com/account/settings
+# The StackState api key to associate your Agent's data with your organization.
 api_key:
 
 # Force the hostname to whatever you want. (default: auto-detected)
@@ -26,7 +24,7 @@ api_key:
 # Set the host's tags (optional)
 # tags: mytag, env:prod, role:database
 
-# Set timeout in seconds for outgoing requests to Datadog. (default: 20)
+# Set timeout in seconds for outgoing requests to StackState. (default: 20)
 # When a request timeout, it will be retried after some time.
 # It will only be deleted if the forwarder queue becomes too big. (30 MB by default)
 # forwarder_timeout: 20
@@ -37,7 +35,7 @@ api_key:
 # default_integration_http_timeout: 9
 
 # Add one "dd_check:checkname" tag per running check. It makes it possible to slice
-# and dice per monitored app (= running Agent Check) on Datadog's backend.
+# and dice per monitored app (= running Agent Check) on StackState's backend.
 # create_dd_check_tags: no
 
 # Collect AWS EC2 custom tags as agent tags (requires an IAM role associated with the instance)
@@ -69,14 +67,12 @@ gce_updated_hostname: yes
 # Graphite listener port
 # graphite_listen_port: 17124
 
-# Additional directory to look for Datadog checks (optional)
+# Additional directory to look for StackState checks (optional)
 # additional_checksd: /etc/sts-agent/checks.d/
 
 # Allow non-local traffic to this Agent
 # This is required when using this Agent as a proxy for other Agents
 # that might not have an internet connection
-# For more information, please see
-# https://github.com/DataDog/dd-agent/wiki/Network-Traffic-and-Proxy-Configuration
 # non_local_traffic: no
 
 # Select the Tornado HTTP Client to be used in the Forwarder,
@@ -110,7 +106,6 @@ gce_updated_hostname: yes
 
 # ========================================================================== #
 # Service Discovery                                                          #
-# See https://github.com/DataDog/dd-agent/wiki/Service-Discovery for details #
 # ========================================================================== #
 #
 # Service discovery allows the agent to look for running services
@@ -128,9 +123,9 @@ gce_updated_hostname: yes
 # sd_backend_port: 4001
 #
 # By default, the agent will look for the configuration templates under the
-# `/datadog/check_configs` key in the back-end. If you wish otherwise, uncomment this option
+# `/stackstate/check_configs` key in the back-end. If you wish otherwise, uncomment this option
 # and modify its value.
-# sd_template_dir: /datadog/check_configs
+# sd_template_dir: /stackstate/check_configs
 #
 # ========================================================================== #
 # Other                                                                      #
@@ -144,7 +139,6 @@ gce_updated_hostname: yes
 # ========================================================================== #
 # DogStatsd configuration                                                    #
 # DogStatsd is a small server that aggregates your custom app metrics. For   #
-# usage information, check out http://docs.datadoghq.com/guides/dogstatsd/   #
 # ========================================================================== #
 
 # If you don't want to enable the DogStatsd server, set this option to no
@@ -154,8 +148,7 @@ gce_updated_hostname: yes
 # dogstatsd_port: 8125
 
 # By default dogstatsd will post aggregate metrics to the Agent (which handles
-# errors/timeouts/retries/etc). To send directly to the datadog api, set this
-# to https://app.datadoghq.com.
+# errors/timeouts/retries/etc).
 # dogstatsd_target: http://localhost:17123
 
 # If you want to forward every packet received by the dogstatsd server
