Rename user in supervisor.conf

--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -17,7 +17,7 @@ logfile_maxbytes = 50MB
 nodaemon = false
 pidfile = /opt/stackstate-agent/run/stackstate-supervisord.pid
 logfile_backups = 10
-user=dd-agent
+user=sts-agent
 environment=PYTHONPATH=/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/checks,LANG=POSIX
 
 [program:collector]
@@ -27,7 +27,7 @@ stderr_logfile=NONE
 priority=999
 startsecs=5
 startretries=3
-user=dd-agent
+user=sts-agent
 environment=PYTHONPATH='/opt/stackstate-agent/agent:/opt/stackstate-agent/agent/checks/libs:$PYTHONPATH'
 
 [program:forwarder]
@@ -37,7 +37,7 @@ stderr_logfile=NONE
 startsecs=5
 startretries=3
 priority=998
-user=dd-agent
+user=sts-agent
 
 [program:dogstatsd]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/dogstatsd.py --use-local-forwarder
@@ -46,7 +46,7 @@ stderr_logfile=NONE
 startsecs=5
 startretries=3
 priority=998
-user=dd-agent
+user=sts-agent
 
 [program:jmxfetch]
 command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/jmxfetch.py
@@ -55,7 +55,7 @@ stderr_logfile=NONE
 redirect_stderr=true
 priority=999
 startsecs=3
-user=dd-agent
+user=sts-agent
 
 [group:datadog-agent]
 programs=forwarder,collector,dogstatsd,jmxfetch
