Rename datadog in supervisord conf

--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -1,14 +1,14 @@
 [supervisorctl]
-serverurl = unix:///opt/stackstate-agent/run/datadog-supervisor.sock
+serverurl = unix:///opt/stackstate-agent/run/stackstate-supervisor.sock
 
 [unix_http_server]
-file=/opt/stackstate-agent/run/datadog-supervisor.sock
+file=/opt/stackstate-agent/run/stackstate-supervisor.sock
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisord]
-http_port = /opt/stackstate-agent/run/datadog-supervisor.sock
+http_port = /opt/stackstate-agent/run/stackstate-supervisor.sock
 minfds = 1024
 minprocs = 200
 loglevel = info
@@ -57,5 +57,5 @@ priority=999
 startsecs=3
 user=sts-agent
 
-[group:datadog-agent]
+[group:stackstate-agent]
 programs=forwarder,collector,dogstatsd,jmxfetch
