--- a/conf.d/vsphere.yaml.example
+++ b/conf.d/vsphere.yaml.example
@@ -15,8 +15,7 @@ instances:
 
     # Read-only credentials to connect to vCenter
     # mandatory
-    # see https://app.datadoghq.com/account/settings#integrations/vsphere
-    username: datadog-readonly@vsphere.local
+    username: stackstate-readonly@vsphere.local
     password: mypassword
 
     # Set to false to disable SSL verification, when connecting to vCenter
@@ -32,17 +31,17 @@ instances:
     # to fetch metrics for these ESXi hosts and the VMs
     # running on it
     # optional
-    # host_include_only_regex: ".*\.prod.datadoghq.com"
+    # host_include_only_regex: ".*\.prod.stackstate.com"
 
     # Use a regex to include only the VMs that are
     # matching this pattern.
     # optional
-    # vm_include_only_regex: ".*\.sql\.datadoghq\.com"
+    # vm_include_only_regex: ".*\.sql\.stackstate\.com"
 
     # Set to true if you'd like to only collect metrics on vSphere VMs which
-    # are marked by a custom field with the value 'DatadogMonitored'
+    # are marked by a custom field with the value 'StackStateMonitored'
     # To set this custom field with PowerCLI, use the follow command: 
-    #   Get-VM <MyVMName> | Set-CustomField -Name "DatadogMonitored" -Value "DatadogMonitored"
+    #   Get-VM <MyVMName> | Set-CustomField -Name "StackStateMonitored" -Value "StackStateMonitored"
     # optional
     # include_only_marked: false
 
