--- a/conf.d/kubernetes.yaml.example
+++ b/conf.d/kubernetes.yaml.example
@@ -16,7 +16,7 @@ instances:
  - port: 4194
 
   # collect_events controls whether the agent should fetch events from the kubernetes API and
-  # ingest them in Datadog. To avoid duplicates, only one agent at a time across the entire
+  # ingest them in StackState. To avoid duplicates, only one agent at a time across the entire
   # cluster should have this feature enabled. To enable the feature, set the parameter to `true`.
   # collect_events: false
 
