--- a/conf.d/docker.yaml.example
+++ b/conf.d/docker.yaml.example
@@ -1,5 +1,5 @@
 # Warning
-# The user running the Datadog Agent (usually "dd-agent") must be part of the "docker" group
+# The user running the StackState Agent (usually "dd-agent") must be part of the "docker" group
 
 init_config:
   # Change the root directory to look at to get cgroup statistics. Useful when running inside a
