--- a/conf.d/iis.yaml.example
+++ b/conf.d/iis.yaml.example
@@ -10,7 +10,7 @@ instances:
   # current machine, you will have to create an instance with empty params.
   #
   # The optional `provider` parameter allows to specify a WMI provider
-  # (default to `32` on Datadog Agent 32-bit or `64`). It is used to request
+  # (default to `32` on StackState Agent 32-bit or `64`). It is used to request
   # WMI data from the non-default provider. Available options are: `32` or `64`.
   # For more information: https://msdn.microsoft.com/en-us/library/aa393067(v=vs.85).aspx
   #
