--- a/conf.d/tokumx.yaml.example
+++ b/conf.d/tokumx.yaml.example
@@ -2,7 +2,7 @@ init_config:
 
 instances:
   # Specify the MongoDB URI, with database to use for reporting (defaults to "admin")
-  # E.g. mongodb://datadog:LnCbkX4uhpuLHSUrcayEoAZA@localhost:27017/my-db
+  # E.g. mongodb://stackstate:LnCbkX4uhpuLHSUrcayEoAZA@localhost:27017/my-db
   - server: mongodb://localhost:27017
     # tags:
     #   - optional_tag1
