renamed dogstatsd -> stsstatsd

--- a/packaging/datadog-agent/source/supervisor.conf
+++ b/packaging/datadog-agent/source/supervisor.conf
@@ -14,7 +14,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 file = %(here)s/../run/agent-supervisor.sock
 
 [supervisorctl]
-prompt = datadog
+prompt = stackstate
 serverurl = unix://%(here)s/../run/agent-supervisor.sock
 
 [program:collector]
@@ -30,8 +30,8 @@ redirect_stderr=true
 priority=998
 startsecs=3
 
-[program:dogstatsd]
-command=python agent/dogstatsd.py --use-local-forwarder
+[program:stsstatsd]
+command=python agent/stsstatsd.py --use-local-forwarder
 redirect_stderr=true
 priority=998
 startsecs=3
@@ -42,5 +42,5 @@ redirect_stderr=true
 priority=999
 startsecs=3
 
-[group:datadog-agent]
+[group:stackstate-agent]
 programs=forwarder,collector,dogstatsd,jmxfetch
