--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -39,8 +39,8 @@ startretries=3
 priority=998
 user=sts-agent
 
-[program:dogstatsd]
-command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/dogstatsd.py --use-local-forwarder
+[program:stsstatsd]
+command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsstatsd.py --use-local-forwarder
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=5
@@ -68,4 +68,4 @@ startretries=2
 user=sts-agent
 
 [group:stackstate-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch,go-metro
+programs=forwarder,collector,stsstatsd,jmxfetch,go-metro
