--- a/supervisord.dev.conf
+++ b/supervisord.dev.conf
@@ -15,7 +15,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 port = 127.0.0.1:9002
 
 [supervisorctl]
-prompt = datadog
+prompt = stackstate
 
 [program:collector]
 command=python agent.py foreground --use-local-forwarder
@@ -31,9 +31,9 @@ redirect_stderr=true
 priority=998
 startsecs=3
 
-[program:dogstatsd]
-command=python dogstatsd.py --use-local-forwarder
-stdout_logfile=dogstatsd.log
+[program:stsstatsd]
+command=python stsstatsd.py --use-local-forwarder
+stdout_logfile=stsstatsd.log
 redirect_stderr=true
 priority=998
 startsecs=3
@@ -45,5 +45,5 @@ redirect_stderr=true
 priority=999
 startsecs=3
 
-[group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch
+[group:stackstate-agent]
+programs=forwarder,collector,stsstatsd,jmxfetch
