--- a/packaging/osx/supervisor.conf
+++ b/packaging/osx/supervisor.conf
@@ -1,14 +1,14 @@
 [supervisorctl]
-serverurl = unix:///opt/stackstate-agent/run/datadog-supervisor.sock
+serverurl = unix:///opt/stackstate-agent/run/stackstate-supervisor.sock
 
 [unix_http_server]
-file=/opt/stackstate-agent/run/datadog-supervisor.sock
+file=/opt/stackstate-agent/run/stackstate-supervisor.sock
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisord]
-http_port = /opt/stackstate-agent/run/datadog-supervisor.sock
+http_port = /opt/stackstate-agent/run/stackstate-supervisor.sock
 minfds = 1024
 minprocs = 200
 loglevel = info
@@ -36,8 +36,8 @@ startsecs=5
 startretries=3
 priority=998
 
-[program:dogstatsd]
-command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/dogstatsd.py --use-local-forwarder
+[program:stsstatsd]
+command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsstatsd.py --use-local-forwarder
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=5
@@ -52,5 +52,5 @@ redirect_stderr=true
 priority=999
 startsecs=3
 
-[group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch
+[group:stackstate-agent]
+programs=forwarder,collector,stsstatsd,jmxfetch
