--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -39,8 +39,8 @@ startretries=3
 priority=998
 user=sts-agent
 
-[program:dogstatsd]
-command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/dogstatsd.py --use-local-forwarder
+[program:stsstatsd]
+command=/opt/stackstate-agent/embedded/bin/python /opt/stackstate-agent/agent/stsstatsd.py --use-local-forwarder
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=5
@@ -58,4 +58,4 @@ startsecs=3
 user=sts-agent
 
 [group:stackstate-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch
+programs=forwarder,collector,stsstatsd,jmxfetch
