--- a/conf.d/ceph.yaml.example
+++ b/conf.d/ceph.yaml.example
@@ -7,7 +7,7 @@ instances:
 #    ceph_cmd: /usr/bin/ceph
 #
 # If your environment requires sudo, please add a line like:
-#          dd-agent ALL=(ALL) NOPASSWD:/usr/bin/ceph
+#          sts-agent ALL=(ALL) NOPASSWD:/usr/bin/ceph
 # to your sudoers file, and uncomment the below option.
 #
 #    use_sudo: True
