--- a/conf.d/directory.yaml.example
+++ b/conf.d/directory.yaml.example
@@ -6,7 +6,7 @@ instances:
   #
   # For each instance, the 'directory' parameter is required, all others are optional.
   #
-  # WARNING: Ensure the user account running the Agent (typically dd-agent) has read
+  # WARNING: Ensure the user account running the Agent (typically sts-agent) has read
   # access to the monitored directory and files.
   #
   # NOTE: on windows, please make sure you escape back-slashes otherwise the YAML
