--- a/packaging/debian/datadog-agent.service
+++ b/packaging/debian/datadog-agent.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=forking
-User=dd-agent
+User=sts-agent
 ExecStart=/opt/stackstate-agent/bin/start_agent.sh
 ExecStop=/opt/stackstate-agent/bin/supervisorctl -c /etc/sts-agent/supervisor.conf shutdown
 
