log pipdeptree on failed build
to find out why winrandom-types was pulled in

--- a/.travis.yml
+++ b/.travis.yml
@@ -110,3 +110,5 @@ script:
 after_failure:
   - echo "Logs from installation process come here / DEBUG LOGS"
   - cat /tmp/ci.log
+  - pip install pipdeptree
+  - pipdeptree -fl
