use url of agent’s config in connbeat via ENV
To use the STSURL environment variable in the connbeat.yml file

# Conflicts:
#	packaging/supervisor.conf
#	packaging/supervisor_32.conf

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -67,5 +67,14 @@ startsecs=2
 startretries=2
 user=sts-agent
 
+[program:connbeat]
+command=/opt/stackstate-agent/bin/connbeat.sh
+stdout_logfile=/tmp/out
+stderr_logfile=/tmp/err
+redirect_stderr=true
+priority=999
+startsecs=3
+user=sts-agent
+
 [group:stackstate-agent]
-programs=forwarder,collector,stsstatsd,jmxfetch,go-metro
+programs=forwarder,collector,stsstatsd,jmxfetch,go-metro,connbeat
