--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -57,5 +57,14 @@ priority=999
 startsecs=3
 user=sts-agent
 
+[program:connbeat]
+command=/opt/stackstate-agent/bin/connbeat.sh
+stdout_logfile=/tmp/out
+stderr_logfile=/tmp/err
+redirect_stderr=true
+priority=999
+startsecs=3
+user=sts-agent
+
 [group:stackstate-agent]
-programs=forwarder,collector,stsstatsd,jmxfetch
+programs=forwarder,collector,stsstatsd,jmxfetch,connbeat
