Also build this branch on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 branches:
   only:
     - master
+    - serviceDiscoveryTest
     - /^\d+\.\d+\.x$/ # release forked patches branch
 
 language: python
