Connection Beat integration: making nice stdout and stderr paths

--- a/packaging/supervisor_32.conf
+++ b/packaging/supervisor_32.conf
@@ -59,8 +59,8 @@ user=sts-agent
 
 [program:connbeat]
 command=/opt/stackstate-agent/bin/connbeat.sh
-stdout_logfile=/tmp/out
-stderr_logfile=/tmp/err
+stdout_logfile=/var/log/stackstate/connbeat.out
+stderr_logfile=/var/log/stackstate/connbeat.err
 redirect_stderr=true
 priority=999
 startsecs=3
