--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -69,8 +69,8 @@ user=sts-agent
 
 [program:connbeat]
 command=/opt/stackstate-agent/bin/connbeat.sh
-stdout_logfile=/tmp/out
-stderr_logfile=/tmp/err
+stdout_logfile=/var/log/stackstate/connbeat.out
+stderr_logfile=/var/log/stackstate/connbeat.err
 redirect_stderr=true
 priority=999
 startsecs=3
