--- a/conf.d/servicenow_cmdb_topology.yaml.example
+++ b/conf.d/servicenow_cmdb_topology.yaml.example
@@ -2,7 +2,10 @@ init_config:
   default_timeout: 10
 
 instances:
-  - url: "http://localhost:5050"
+  - url: "https://dev12406.service-now.com"
+    basic_auth:
+      user: stackstate
+      password: STACKSTATE!
     # tags:
     #      - optional_tag1
     #      - optional_tag2
