--- a/connbeat.yml
+++ b/connbeat.yml
@@ -4,7 +4,8 @@ connbeat:
   expose_environ: false
   aggregation: 10s
   poll_interval: 2s
-  enable_tcp_diag: true
+  enable_tcp_diag: false
+  enable_local_connections: true
   enable_docker: false
   docker_environment: ["PATH", "MESOS_TASK_ID"]
 
@@ -22,5 +23,5 @@ output:
     #  name: "connbeat"
     #  path: "connbeat.template.json"
 
-  console:
-    pretty: false
+  #console:
+  #  pretty: false
