--- a/conf.d/servicenow_cmdb_topology.yaml.example
+++ b/conf.d/servicenow_cmdb_topology.yaml.example
@@ -2,10 +2,10 @@ init_config:
   default_timeout: 10
 
 instances:
-  - url: "https://dev12406.service-now.com"
+  - url: "https://dev14393.service-now.com"
     basic_auth:
-      user: stackstate
-      password: STACKSTATE!
+      user: admin
+      password: StackState!
     # tags:
     #      - optional_tag1
     #      - optional_tag2
