--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -6,13 +6,12 @@ init_config:
   seconds_between_retries: 1
 
   # Polling interval between calls to splunk
-  polling_interval: 15
+  default_polling_interval_seconds: 15
 
 instances:
   - url: "http://localhost:13001"
     username: "admin"
     password: "admin"
-    polling_interval: 15
     saved_searches:
       - name: "components"
         element_type: "component"
