--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -13,6 +13,8 @@ init_config:
   # Polling interval between calls to splunk
   default_polling_interval_seconds: 15
 
+# Currently it is not possible to specify multiple instances with the same url.
+# It is possible to specify multiple saved_searches on a single instance.
 instances:
   - url: "http://localhost:13001"
     username: "admin"
@@ -20,6 +22,11 @@ instances:
     saved_searches:
       - name: "components"
         element_type: "component"
+        # request_timeout_seconds: 10
+        # search_max_retry_count: 5
+        # search_seconds_between_retries: 1
+        # polling_interval_seconds: 15
+
         # Additional parameters for the splunk saved search query
         parameters:
           - force_dispatch: true
