splunk topology: parameters should not be an array

--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -29,13 +29,13 @@ instances:
 
         # Additional parameters for the splunk saved search query
         parameters:
-          - force_dispatch: true
-            dispatch.now: true
+          force_dispatch: true
+          dispatch.now: true
       #- name: "relations"
       #  element_type: "relation"
       #  parameters:
-      #    - force_dispatch: true
-      #      dispatch.now: true
+      #    force_dispatch: true
+      #    dispatch.now: true
 
     # tags:
     #      - optional_tag1
