--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -7,19 +7,23 @@ init_config:
   # a search on a saved search does not immediately return results, one has to retry until data is received,
   # search_max_retry_count specifies the number of retries in which it expects results to be available.
   # Between each retry some time is waited before retrying, specified by search_seconds_between_retries.
-  default_search_max_retry_count: 5
+  default_search_max_retry_count: 10
   default_search_seconds_between_retries: 1
 
   # Interval at which to dispatch a saved search
-  default_polling_interval_seconds: 15
+  default_polling_interval_seconds: 300
+
+  default_verify_ssl_certificate: false
+
 
 # Currently it is not possible to specify multiple instances with the same url.
 # It is possible to specify multiple saved_searches on a single instance.
 instances:
-  - url: "http://localhost:13001"
+  - url: "https://localhost:8089"
+    # verify_ssl_certificate: false
     username: "admin"
     password: "admin"
-    # polling_interval_seconds: 15
+    # polling_interval_seconds: 300
     component_saved_searches:
       - name: "components"
         # request_timeout_seconds: 10
