--- a/conf.d/splunk_event.yaml.example
+++ b/conf.d/splunk_event.yaml.example
@@ -10,14 +10,20 @@ init_config:
   default_search_max_retry_count: 5
   default_search_seconds_between_retries: 1
 
+  default_verify_ssl_certificate: false
+
+  # Hwo many results should we request per request to splunk
+  default_batch_size: 1000
+
   # The amount of time (in seconds) to go in the past for an initial query when the agent starts up.
   # Warning: can cause events to be reported twice if the agent is start/stopped
-  # initial_history_time: 300
+  default_initial_history_time: 60
 
 # Currently it is not possible to specify multiple instances with the same url.
 # It is possible to specify multiple saved_searches on a single instance.
 instances:
-  - url: "http://localhost:13001"
+  - url: "https://localhost:8089"
+    # verify_ssl_certificate: false
     username: "admin"
     password: "admin"
     saved_searches:
@@ -26,10 +32,11 @@ instances:
         # request_timeout_seconds: 10
         # search_max_retry_count: 5
         # search_seconds_between_retries: 1
+        # batch_size: 1000
 
         # The amount of time (in seconds) to go in the past for an initial query when the agent starts up.
         # Warning: can cause events to be reported twice if the agent is start/stopped
-        # initial_history_time: 300
+        # initial_history_time: 60
 
         # Additional parameters for the splunk saved search query
         parameters:
