--- a/conf.d/splunk_event.yaml.example
+++ b/conf.d/splunk_event.yaml.example
@@ -1,4 +1,4 @@
-# Splunk topology intake uses basic authentication
+# Splunk event intake uses basic authentication
 
 init_config:
   # time before a HTTP request times out
@@ -12,7 +12,7 @@ init_config:
 
   default_verify_ssl_certificate: false
 
-  # Hwo many results should we request per request to splunk
+  # How many results should we request per request to splunk
   default_batch_size: 1000
 
   # The amount of time (in seconds) to go in the past for an initial query when the agent starts up.
