--- a/stackstate.conf.example
+++ b/stackstate.conf.example
@@ -27,7 +27,7 @@ api_key: none
 # tags: mytag, env:prod, role:database
 
 # Timeout in seconds for requests to for StackState intake api
-http_emmiter_timeout=60
+http_emitter_timeout=60
 
 # Set timeout in seconds for outgoing requests to StackState. (default: 20)
 # When a request timeout, it will be retried after some time.
