Add some logging and example config

--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -29,6 +29,7 @@ instances:
     # polling_interval_seconds: 300
     component_saved_searches:
       - name: "components"
+        # match: "comp*"
         # request_timeout_seconds: 10
         # search_max_retry_count: 5
         # search_seconds_between_retries: 1
@@ -40,6 +41,7 @@ instances:
           dispatch.now: true
     relation_saved_searches:
       #- name: "relations"
+      #  match: "comp*"
       #  request_timeout_seconds: 10
       #  search_max_retry_count: 5
       #  search_seconds_between_retries: 1
