--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -47,7 +47,7 @@ instances:
     relation_saved_searches:
       #- name: "relations"
       # Wilcard match to find relation queries, can be used instead of name
-      #  match: "comp*"
+      #  match: "relation*"
       #  request_timeout_seconds: 10
       #  search_max_retry_count: 5
       #  search_seconds_between_retries: 1
