Make example have prooper regex

--- a/conf.d/splunk_event.yaml.example
+++ b/conf.d/splunk_event.yaml.example
@@ -34,7 +34,7 @@ instances:
       # Splunk name of the saved search
       - name: "events"
         # Wilcard match to find event queries, can be used instead of name
-        # match: "events*"
+        # match: "events.*"
         # request_timeout_seconds: 10
         # search_max_retry_count: 5
         # search_seconds_between_retries: 1
