--- a/conf.d/splunk_topology.yaml.example
+++ b/conf.d/splunk_topology.yaml.example
@@ -34,7 +34,7 @@ instances:
     component_saved_searches:
       - name: "components"
         # Wilcard match to find component queries, can be used instead of name
-        # match: "comp*"
+        # match: "comp.*"
         # request_timeout_seconds: 10
         # search_max_retry_count: 5
         # search_seconds_between_retries: 1
