Rename max chunk size

--- a/conf.d/splunk_event.yaml.example
+++ b/conf.d/splunk_event.yaml.example
@@ -25,8 +25,8 @@ init_config:
   # Maximum amount of history recovered after a restart
   default_max_restart_history_seconds: 86400
 
-  # Maximum range of time when querying historical data from splunk
-  default_max_query_time_range_seconds: 3600
+  # Maximum siz of chunks when querying historical data from splunk
+  default_max_query_chunk_seconds: 3600
 
 # Currently it is not possible to specify multiple instances with the same url.
 # It is possible to specify multiple saved_searches on a single instance.
@@ -52,7 +52,7 @@ instances:
         # max_restart_history_seconds: 86400
 
         # Maximum range of time when querying historical data from splunk
-        # max_query_time_range_seconds: 3600
+        # max_query_chunk_seconds: 3600
 
         # Additional parameters for the splunk saved search query
         parameters:
