--- a/conf.d/splunk_event.yaml.example
+++ b/conf.d/splunk_event.yaml.example
@@ -22,10 +22,10 @@ init_config:
   # Warning: can cause events to be reported twice if the agent is start/stopped
   default_initial_history_time_seconds: 0
 
-  # Maximum amount of history recovered after a restart
+  # Maximum amount of history recovered after a restart (1 day)
   default_max_restart_history_seconds: 86400
 
-  # Maximum siz of chunks when querying historical data from splunk
+  # Maximum size of chunks when querying historical data from splunk
   default_max_query_chunk_seconds: 3600
 
 # Currently it is not possible to specify multiple instances with the same url.
@@ -43,15 +43,8 @@ instances:
         # search_max_retry_count: 5
         # search_seconds_between_retries: 1
         # batch_size: 1000
-
-        # The amount of time (in seconds) to go in the past for an initial query when the agent starts up.
-        # Warning: can cause events to be reported twice if the agent is start/stopped
-        # initial_history_time_seconds: 60
-
-        # Maximum amount of history recovered after a restart
+        # initial_history_time_seconds: 0
         # max_restart_history_seconds: 86400
-
-        # Maximum range of time when querying historical data from splunk
         # max_query_chunk_seconds: 3600
 
         # Additional parameters for the splunk saved search query
