--- a/conf.d/ucmdb_file.yaml.example
+++ b/conf.d/ucmdb_file.yaml.example
@@ -3,7 +3,21 @@
 init_config:
 
 instances:
+  # File location where tql query result is synced from
   - location: "/path/to/file"
+    # ci attributes that will be exposed as tags
+    tag_attributes:
+      - root_class
+
+    # ci attribute that stores component type
+    type_component_field:
+      - root_class
+
+    # ci attribute that stores relation type
+    type_relation_field:
+      - name
+
+    # optional tags added to each topology element
     tags:
       - optional_tag1
       - optional_tag2
